update lnbits to 0.11.1

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.10.9"
+version: "0.11.1"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,26 +41,20 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  In this release, we introduce a whole suite of new security features to harden your LNbits instance. Our goal is to make these features
-  accessible and keep every instance as safe as possible to protect user funds from possible security breaches.
+  This release introduces the LNbits node manager which allows you to manage your Lightning channels directly from within your LNbits. 
+  The node manager works with Core Lightning and LND and we plan to add support for more Lightning backends soon.
 
+  - Manage your Lightning channels directly from within your LNbits.
 
-  You will find a new Security panel in your Manage Server AdminUI that you can access as the super user. All features are opt-in and are also accessible via the LNbits API.
+  - View the transaction history on your node to see a list of all incoming and outgoing payments
 
+  - The node manager also offers a public node page that you can share with others who want to open a channel to your node.
 
-  The Security panel has six components:
+  - You can activate the node UI in your LNbits admin panel.
 
-  - Server logs 📝
-
-  - IP blocker 🚫
-
-  - Rate limiter 🐌
-
-  - Security notifications 🔔
-
-  - Killswitch 🪓
-  
-  - Watchdog 🐕 (coming soon)
+  We have upgraded the API framework that we use in LNbits. 
+  That means that most extensions need to be update to work with this release. 
+  Please log in as an admin user and update your extensions to the latest version after upgrading your LNbits.
 
   
   📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
