--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -18,14 +18,13 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
 dependencies: []
 path: ""
 torOnly: false
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This This release is a minor release updating dependencies and moving to a Low-Privileged/Distroless Docker Image
+  This release is a minor release updating dependencies and moving to a Low-Privileged/Distroless Docker Image
 
   Read the full release notes for additional information and detailed changes at https://github.com/hay-kot/homebox/releases/tag/v0.10.1
 submitter: Xosten
