--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -42,15 +42,14 @@ defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
   This release introduces the LNbits node manager which allows you to manage your Lightning channels directly from within your LNbits. 
-  The node manager works with Core Lightning and LND and we plan to add support for more Lightning backends soon.
+  The node manager works with Core Lightning and LND and we plan to add support for more Lightning backends soon. You can activate the node manager in your LNbits admin panel, which will allow you to:
 
   - Manage your Lightning channels directly from within your LNbits.
 
   - View the transaction history on your node to see a list of all incoming and outgoing payments
 
-  - The node manager also offers a public node page that you can share with others who want to open a channel to your node.
+  - Share a public node page with others who want to open a channel to your node.
 
-  - You can activate the node UI in your LNbits admin panel.
 
   We have upgraded the API framework that we use in LNbits. 
   That means that most extensions need to be update to work with this release. 
