--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/plex:1.32.6.7557-1cf77d501-ls188@sha256:6b82fe376f675a55204b68bd66a369d56c46eccc2fbb34fededa538c1a460b67
+    image: linuxserver/plex:version-1.32.7.7621-871adbd44@sha256:fedd6ee2ba80c509e6433a23d3dcbbade12bda0162c879bc1a64d7c75a2810fc
     restart: on-failure
     hostname: "${DEVICE_HOSTNAME}"
     environment:
