add dashes to release note lists

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -31,26 +31,26 @@ permissions:
 releaseNotes: >-
   NEW:
 
-  (Web) Updated to 4.116.1
+  - (Web) Updated to 4.116.1
   
 
   FIXES:
 
-  (Library) “Episode sorting” and “Album sorting” preferences had meaningless “Library default” global library setting (#14522)
+  - (Library) “Episode sorting” and “Album sorting” preferences had meaningless “Library default” global library setting
   
-  (Library) The default season sort order in TV libraries may not work as intended (#14570)
+  - (Library) The default season sort order in TV libraries may not work as intended
   
-  (LiveTV) Transcoded video would fail to play in some circumstances (#14539)
+  - (LiveTV) Transcoded video would fail to play in some circumstances
   
-  (Metadata) Items could lose metadata if a refresh request failed due to a network failure (#14551)
+  - (Metadata) Items could lose metadata if a refresh request failed due to a network failure
   
-  (Player) Controlling a player didn’t work in some cases (#14567)
+  - (Player) Controlling a player didn’t work in some cases
   
-  (Sharing) Sharing a single episode was not playable by sharee (#14559)
+  - (Sharing) Sharing a single episode was not playable by sharee
   
-  (Transcoder) HW transcoding failed on GeminiLake CPUs when running on linux (#14465)
+  - (Transcoder) HW transcoding failed on GeminiLake CPUs when running on linux
   
-  (Transcoder) Videos HW encoded on the shield would display a black screen on some devices (#14384)
+  - (Transcoder) Videos HW encoded on the shield would display a black screen on some devices
  
 
   See full release notes here: https://www.videohelp.com/software/Plex
