Update Plex to v1.32.7.7621 (#824)

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: plex
 category: media
 name: Plex
-version: "1.32.6.7557"
+version: "1.32.7.7621"
 tagline: Stream Movies & TV Shows
 description: >-
   Stream movies and TV shows, plus 300+ channels of live TV, instantly, without a subscription. Watch live TV and movies anywhere, from any device, with Plex.
@@ -31,30 +31,26 @@ permissions:
 releaseNotes: >-
   NEW:
 
-  (TerraMaster) Improve multi-volume support when adding folders to libraries.
-
-  (Transcoder) Enable hardware transcoding by default where available (#14282)
+  - (Web) Updated to 4.116.1
   
 
   FIXES:
 
-  (Hubs) User could order a hub before Continue Watching hub (#14236)
-
-  (Library) In some cases, media item presence and accessibility could fail to be reported (#14307)
-
-  (Metadata) Items could lose metadata if a refresh request failed due to a network failure (#14551)
-
-  (Photos) Autotag data was not visible even if photos had pre-existing autotags (#14493)
-
-  (Photos) Places filter was not visible even if photos had pre-existing place data (#14519)
-
-  (Preferences) Adjust library section preference text for intro and credits detection (#14152)
-
-  (Scanner) Episodes with absolute numbering of 264 and 265 could get ignored (#14084)
-
-  (Security) Certain requests could trigger unwanted notifications (#14524)
-
-  (Transcoding) Hardware transcoding failed on linux machines (#14553)
+  - (Library) “Episode sorting” and “Album sorting” preferences had meaningless “Library default” global library setting
+  
+  - (Library) The default season sort order in TV libraries may not work as intended
+  
+  - (LiveTV) Transcoded video would fail to play in some circumstances
+  
+  - (Metadata) Items could lose metadata if a refresh request failed due to a network failure
+  
+  - (Player) Controlling a player didn’t work in some cases
+  
+  - (Sharing) Sharing a single episode was not playable by sharee
+  
+  - (Transcoder) HW transcoding failed on GeminiLake CPUs when running on linux
+  
+  - (Transcoder) Videos HW encoded on the shield would display a black screen on some devices
  
 
   See full release notes here: https://www.videohelp.com/software/Plex
