tweak release notes

--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -30,7 +30,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  This update brings Electrs from version 0.9.14 to 0.10.1, there are a variety of improvements including optimizations to indexing. 
+  This update from version 0.9.14 to 0.10.1 brings a variety of improvements, including optimizations to indexing and index querying. 
   Read more at: https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0101-nov-01-2023
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/242
