--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -3,7 +3,7 @@ id: alby-nostr-wallet-connect
 name: Nostr Wallet Connect
 tagline: The power of the zaps at the tip of your fingers.
 category: finance
-version: "0.2.0"
+version: "0.3.0"
 port: 58000
 description: >-
   Connect your LND node over Nostr to zap directly from within supported apps like Damus & Amethyst.
@@ -24,7 +24,8 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
+releaseNotes: >-
+  This release includes a number of bug fixes and improvements. Full release notes are available at https://github.com/getAlby/nostr-wallet-connect/releases/tag/0.3.0
 dependencies:
   - lightning
 path: ""
