Update audiobookshelf to v2.5.0

--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: media
-version: "2.2.22"
+version: "2.5.0"
 port: 13378
 description: >-
   Features:
@@ -61,20 +61,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Added: 
-    - Send ebook to other devices
-    - Export OPML for podcast libraries
-    - Library filter for ebook items
-
-  Fixed: 
-    - Closing audio player resetting progress
-    - Epub3 ebook showing white background
-    - Podcast episode downloads for RSS feeds that use the same title for every episode
-
-  Changed: 
-    - Library filter max height set to window height
-    - New API endpoints for static library item files, ebooks and downloading
-    - Security updates
-    - More strings translated (German)
+  This release brings audiobookshelf from version 2.2.22 to version 2.5.0. Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/302
