--- a/bazarr/umbrel-app.yml
+++ b/bazarr/umbrel-app.yml
@@ -18,7 +18,7 @@ description: >-
   You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
   You will also need to input your API key for Sonarr and/or Radarr. You can find your API keys in the settings of the Sonarr and Radarr apps.
 releaseNotes: >-
-  This release update Bazarr from 1.2.2 to 1.3.1. Full release notes are found at https://github.com/morpheus65535/bazarr/releases.
+  This release updates Bazarr from 1.2.2 to 1.3.1. Full release notes are found at https://github.com/morpheus65535/bazarr/releases.
 developer: morpheus65535
 website: https://www.bazarr.media/
 dependencies: []
