--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.11.6"
+version: "1.11.7"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,16 +34,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  Upgrading from version 1.11.4 to 1.11.6 introduces important updates especially beneficial for 
-  servers with high user traffic, mitigating potential server crash issues and enhancing user 
-  interface and experience across the platform. Alongside numerous bug fixes, this update 
-  brings improvements such as refined receipt info display and currency rate recommendations. 
-  New features and improvements from version 1.11.5, including the addition of payout reports, 
-  custom label deletion in wallets, and enhanced dashboard and login functionalities, are 
-  integrated. Update is recommended to leverage these enhancements and ensure system stability.
+  This release includes various bug fixes and improvements, as well as the following new features:
+  
+  - Scan QR codes for destination/address when claiming funds.
+
+  - Ability to delete a user by email
+
+  - New checkout settings
 
 
-
-  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
+  Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases/tag/v1.11.7.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
