--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: bitcoin
 name: Ride The Lightning
-version: "0.14.0-beta-hotfix-1"
+version: "0.14.1-beta"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
@@ -40,21 +40,14 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This is a simple hotfix release to allow users to view their LND configuration file directly in the UI by accessing the Ride The Lightning app, selecting "Node Config" from the menu, and then selecting "LND Config".
+  - Support for opening Taproot Channels
+
+  - Default onchain address type is now P2TR
+
+  - and more!
 
 
-  The previous v0.14.0-beta release included bug fixes and performance improvements:
-
-  - Navigation bug fixes from the dashboard
-
-  - Connect with a peer from the node lookup page
-
-  - Navigation to node and channel lookup from the info page
-
-  - LND bug fix for the breaking changes on the send payment API
-
-
-  Full release notes can be found here: https://github.com/Ride-The-Lightning/RTL/releases
+  Full release notes are available at https://github.com/Ride-The-Lightning/RTL/releases.
 path: ""
 defaultUsername: ""
 deterministicPassword: true
