--- a/freshrss/umbrel-app.yml
+++ b/freshrss/umbrel-app.yml
@@ -1,8 +1,8 @@
 manifestVersion: 1
 id: freshrss
 category: social
-name: Freshrss
-version: "1.21.0"
+name: FreshRSS
+version: "1.22.1"
 tagline: A free, self-hostable aggregator for rss feeds
 description: >-
   FreshRSS is an RSS aggregator and reader. It enables you to seamlessly read and follow content from multiple websites at
@@ -22,7 +22,8 @@ description: >-
   - Import/export of your feeds into OPML format (more information)
   
   - and more!
-releaseNotes: ""
+releaseNotes: >-
+  This release updates FreshRSS from version 1.21.0 to 1.22.1. Full release notes are available at https://github.com/FreshRSS/FreshRSS/releases.
 developer: FreshRSS Org
 website: https://freshrss.org/
 dependencies: []
