fix release notes formatting

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -27,7 +27,7 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-releaseNotes: >-
+releaseNotes: |
   This release updates Tailscale from v1.48.1 to v1.52.0 which includes: 
   v1.50.0
   - tailscale ping now sends an ICMP Ping code of 0.
