change to rootless image

--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       APP_PORT: 7745
     
   web:
-    image: ghcr.io/hay-kot/homebox:v0.10.1@sha256:542f3d6156c7431b2127b35b37f97a121754dd92abb910afe1bbf0008706d2a1
+    image: ghcr.io/hay-kot/homebox:v0.10.1-rootless@sha256:644bd92d827c7ac2c491fad8fd4607bb2b3598a92efc40236d743619c95c7050
     restart: on-failure
     user: 1000:1000
     environment:
