--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3006
 
   app:
-    image: getumbrel/umbrel-lightning:v1.1.2@sha256:3ab819f6335abebb160d2c7b4bd979ad706e25208d219beb9f82d4c1dadd3eff
+    image: getumbrel/umbrel-lightning:v1.2.0@sha256:6252a4b7412f157ee61576af8f9e924d4f73e7e9dc2ba171cc9dc2767df7ffed
     restart: on-failure
     volumes:
       - "${APP_LIGHTNING_NODE_DATA_DIR}:/data/.lnd"
@@ -33,6 +33,7 @@ services:
       JSON_SETTINGS_FILE: "/data/settings.json"
       UMBREL_LND_CONF_FILEPATH: "/data/.lnd/umbrel-lnd.conf"
       LND_CONF_FILEPATH: "/data/.lnd/lnd.conf"
+      LND_INITIALIZE_WITH_TOR_ONLY: "${LND_INITIALIZE_WITH_TOR_ONLY:-unset}"
       DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
       EXPLORER_PORT: "${APP_MEMPOOL_PORT}"
       EXPLORER_HIDDEN_SERVICE: "${APP_MEMPOOL_HIDDEN_SERVICE}"
