--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       APP_PORT: 7745
     
   web:
-    # TODO: update with version-tagged image when available (https://github.com/hay-kot/homebox/pull/372)
-    image: ghcr.io/hay-kot/homebox:nightly-rootless@sha256:1ec765caa21ad37a1fe64eaed2b10b1652169389a275c914eab71e6fd10232b9
+    image: ghcr.io/hay-kot/homebox:v0.10.1-rootless@sha256:644bd92d827c7ac2c491fad8fd4607bb2b3598a92efc40236d743619c95c7050
     restart: on-failure
     user: 1000:1000
     environment:
