--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -3,7 +3,7 @@ id: homebox
 name: HomeBox
 tagline: An inventory and organization system built for the home user
 category: files
-version: "0.9.2"
+version: "v0.10.1"
 port: 7745
 description: >-
   Homebox is an inventory and organization system built for the home user! With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
@@ -18,11 +18,14 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
 dependencies: []
 path: ""
 torOnly: false
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  This release is a minor release updating dependencies and moving to a Low-Privileged/Distroless Docker Image
+
+  Read the full release notes for additional information and detailed changes at https://github.com/hay-kot/homebox/releases/tag/v0.10.1
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/501
