Update whoogle-search to 0.8.4 (#841)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/whoogle-search/umbrel-app.yml
+++ b/whoogle-search/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: whoogle-search
 category: networking
 name: Whoogle Search
-version: "0.8.3"
+version: "0.8.4"
 tagline: A self-hosted, ad-free, privacy-respecting metasearch engine
 description: >-
   Get Google search results, but without any ads, javascript, AMP links, 
@@ -68,9 +68,18 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This update fixes a Cookie Consent bug affecting all EU users.
+  Minor update:
+    - Site favicons are now fetched and displayed for each search result
+    - Audio tags are now interpreted correctly
+    - Primarily found in word definition cards in the results view
+    - POST requests now redirected as encrypted GET requests
+    - This allows navigating back from a result website to the Whoogle search result page without having to confirm form resubmission
+    - The "GET-only searches" config is still available for anyone who still prefers it
+    - URLs in element and window endpoints are now validated
+    - Fixes a potential vulnerability where an element or window endpoint could retrieve file contents from a service hosted on another port
+    - Valid HTML in result text content is now sanitized to prevent parsing issues
   
   
-  Full release notes are found at https://github.com/benbusby/whoogle-search/releases/tag/v0.8.3
+  Full release notes are found at https://github.com/benbusby/whoogle-search/releases/tag/v0.8.4
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/117
