Update tautulli to v2.13.2

--- a/tautulli/docker-compose.yml
+++ b/tautulli/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8181
 
   web:
-    image: lscr.io/linuxserver/tautulli:2.12.5@sha256:4bf16db026fd0aa81f4afa02cb92827f1e072b7de5a7cb71e767e960f8620f1a
+    image: linuxserver/tautulli:2.13.2@sha256:6195b187030637f5588c33988b3686b96f003c726b22958ee0d589549c6fb50f
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
     restart: on-failure
