--- a/tautulli/umbrel-app.yml
+++ b/tautulli/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tautulli
 category: media
 name: tautulli
-version: "2.12.5"
+version: "2.13.2"
 tagline: Monitor your Plex Media Server
 description: >-
   Tautulli is a 3rd party application that you can run alongside your Plex Media Server to monitor activity and track various statistics.
@@ -28,5 +28,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+releaseNotes: |
+  This release updates Tautulli from v2.12.5 to v2.13.2 which includes: 
+
+  - History: Added quarter values icons for history watch status. (#2179, #2156) (Thanks @herby2212)
+  - Graphs: Added concurrent streams per day graph. (#2046) (Thanks @herby2212)
+  - Exporter: Added metadata directory to exporter fields. Banner exporter fields for tv shows.
+  - UI: Added last triggered time to notification agents and newsletter agent lists.
+  - Other: Added X-Plex-Language header override to config file.
+
+  Full release notes and detailed information is available at https://github.com/Tautulli/Tautulli/releases
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/673
