--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: trilium-notes
 category: files
 name: Trilium Notes
-version: "0.61.13"
+version: "0.60.4"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
   Features
@@ -61,16 +61,24 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
-  This update upgrades Trilium Notes from version 0.60.4 to 0.61.13.
+  This update upgrades Trilium Notes from version 0.59.4 to 0.60.4.
 
-  0.61 is a big release. The flagship feature is support for Attachments and all related functionality around it (ETAPI, Sharing ...).
 
-  - revision history now captures attachments which means that in text notes you can see changes in the included images and file attachments.
+  Version 0.60.4 includes the following changes:
 
-  v0.61.13 should bring important fixes:
-  
-  - crashing on migration of inline images
+  - consistent tooltip arrow style
 
-  - sync error with revisions (the underlying cause is unknown, but a more graceful error handling should mitigate the problem)
+  - selected text in HTML view is searched immediately in find box
 
-  Full release notes and detailed information for versions between 0.61.0 and 0.61.13. are available at https://github.com/zadam/trilium/releases
+  - smooth scrolling for TOC
+
+  - improved Cyrillic font support
+
+  - move "tree actions" to the right
+
+  - improved include note display
+
+  - added ability to override default search engine
+
+
+  Full release notes and detailed information for versions between 0.59.4 and 0.60.4. are available at https://github.com/zadam/trilium/releases
