Update trilium-notes to 0.61.13

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: trilium-notes
 category: files
 name: Trilium Notes
-version: "0.60.4"
+version: "0.61.13"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
   Features
@@ -61,24 +61,21 @@ torOnly: false
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/199
 releaseNotes: >-
-  This update upgrades Trilium Notes from version 0.59.4 to 0.60.4.
+  This update upgrades Trilium Notes from version 0.60.4 to 0.61.13.
 
+  v0.61.13 should bring important fixes:
 
-  Version 0.60.4 includes the following changes:
+  - crashing on migration of inline images
+  - sync error with revisions (the underlying cause is unknown, but a more graceful error handling should mitigate the problem)
 
-  - consistent tooltip arrow style
+  And continuing with the overall 0.61 news:
 
-  - selected text in HTML view is searched immediately in find box
+  - It's possible to upgrade to 0.61 only from 0.60.X. If you're on an older version, download and run 0.60.4 first. Only after that upgrade to 0.61.
 
-  - smooth scrolling for TOC
+  0.61 is a big release (in some metrics largest ever) and took time a long time to develop & stabilize. I hope the experience will now be smooth.
 
-  - improved Cyrillic font support
+  The flagship feature is support for Attachments and all related functionality around it (ETAPI, Sharing ...).
 
-  - move "tree actions" to the right
+  - revision history now captures attachments, which means that in text notes you can see changes in the included images and file attachments.
 
-  - improved include note display
-
-  - added ability to override default search engine
-
-
-  Full release notes and detailed information for versions between 0.59.4 and 0.60.4. are available at https://github.com/zadam/trilium/releases
+  Full release notes and detailed information for versions between 0.61.0 and 0.61.13. are available at https://github.com/zadam/trilium/releases
