Update Penpot to 1.19.3

--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: penpot
 category: developer
 name: Penpot
-version: "1.18.3"
+version: "1.19.3"
 tagline: Design and prototyping platform
 description: >-
   Penpot is a pioneering open-source platform for design and prototyping, tailored specifically for product teams.
@@ -23,5 +23,25 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  This release updates Penpot from version 2.3.2 to 1.19.3.
+
+  ✨ New features
+
+  - Remember last color mode in colorpicker Taiga #5508
+
+  - Improve layers multiselection behaviour Github #5741
+
+  - Remember last active team across logouts / sessions Github #3325
+
+  🐛 Bugs fixed
+
+  - List view is discarded on tab change on Workspace Assets Sidebar tab Github #3547
+
+  - Fix message popup remains open when exiting workspace with browser back button Taiga #5747
+
+  - When editing text if font is changed, the proportions of the rendered shape are wrong Taiga #5786
+
+  Full release notes and detailed information is available at https://github.com/penpot/penpot/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/605 
