fix missing from app-store

--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -26,7 +26,7 @@ defaultPassword: ""
 releaseNotes: >-
   This release updates Penpot from version 2.3.2 to 1.19.3.
 
-  ✨ New features
+  New features
 
   - Remember last color mode in colorpicker Taiga #5508
 
@@ -34,7 +34,7 @@ releaseNotes: >-
 
   - Remember last active team across logouts / sessions Github #3325
 
-  🐛 Bugs fixed
+  Bugs fixed
 
   - List view is discarded on tab change on Workspace Assets Sidebar tab Github #3547
 
