add notes on updating

--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -70,7 +70,7 @@ releaseNotes: >-
 
   And continuing with the overall 0.61 news:
 
-  - It's possible to upgrade to 0.61 only from 0.60.X. If you're on an older version, download and run 0.60.4 first. Only after that upgrade to 0.61.
+  - It's possible to upgrade to 0.61 only from 0.60.X. If you're on an older version, you will need to uninstall and then reinstall Trilium Notes (back-up data folder first).
 
   0.61 is a big release (in some metrics largest ever) and took time a long time to develop & stabilize. I hope the experience will now be smooth.
 
