add remaining release notes

--- a/snowflake/umbrel-app.yml
+++ b/snowflake/umbrel-app.yml
@@ -47,9 +47,22 @@ releaseNotes: >-
   
   - Use ShouldBeNil to check for nil values
   
-  - continued...
+  - chore(deps): update module github.com/smartystreets/goconvey to v1.8.1
+
+  - chore(deps): update module gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/goptlib to v1.5.0
+
+  - chore(deps): update module github.com/pion/webrtc/v3 to v3.2.20
+
+  - Update CI targets to include only Go 1.20 and 1.21
+
+  - chore(deps): update module golang.org/x/net to v0.15.0
+
+  - Update module golang.org/x/sys to v0.12.0
 
   
   Release information: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/releases
+
+
+  Compare to v2.1.0: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/compare/v2.4.1...v2.7.0
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1284
