Update gitea to 1.21.0

--- a/gitea/umbrel-app.yml
+++ b/gitea/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: gitea
 category: developer
 name: Gitea
-version: "1.20.3"
+version: "1.21.0"
 tagline: A painless self-hosted Git service
 description: >-
   Gitea is a painless self-hosted Git service. It is similar to
@@ -42,61 +42,41 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This release updates Gitea from 1.19.1 to 1.20.3.
+  This release updates Gitea from 1.20.3 to 1.21.0.
   A full list of new features, improvements, and bug fixes
-  for versions between 1.19.1 and 1.20.3 can be found here: https://github.com/go-gitea/gitea/releases.
+  for versions between 1.20.3 and 1.21.0 can be found here: https://github.com/go-gitea/gitea/releases.
   
   
-  Version 1.20.3 release notes highlights:
+  Version 1.21.0 release notes highlights:
   
   
   BREAKING
 
-  - Fix the wrong derive path
+  - Restrict certificate type for builtin SSH server
 
-
-  SECURITY
-
-  - Fix API leaking Usermail if not logged in
+  - Refactor to use urfave/cli/v2
 
   
   FEATURES 
   
-  - Add ThreadID parameter for Telegram webhooks
+  - User details page
+
+  - Chore(actions): support cron schedule task 
+
+  - Add Retry button when creating a mirror-repo fails 
   
   
   ENHANCEMENTS
   
-  - Add minimum polyfill to support "relative-time-element" in PaleMoon
+  - Render email addresses as such if followed by punctuation
 
-  - Move dropzone progress bar to bottom to show filename when uploading
+  - Show error toast when file size exceeds the limits
   
-  - Fix dark theme highlight for "NameNamespace"
+  - Fix citation error when the file size is larger than 1024 bytes
   
-  - Display human-readable text instead of cryptic filemodes
+  - Remove action runners on user deletion 
   
-  - Warn instead of reporting an error when a webhook cannot be found
-  
-  - Use 'object-fit: contain' for oauth2 custom icons
-  
-  - Fix the topic validation rule and suport dots
-  
-
-  BUGFIXES
-  
-  - Fix "issueReposQueryPattern does not match query"
-
-  - Fix incorrect CLI exit code and duplicate error message
-
-  - Fix storage path logic especially for relative paths
-
-  - Fix attachment clipboard copy on insecure origin
-  
-  - Fix wrong middleware sequence
-
-  - Avoiding accessing undefined tributeValues
-
-  - Fix admin queue page title and fix CI failures
+  - Remove set tabindex on view issue
   
 
 torOnly: false
