--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,17 +2,13 @@ manifestVersion: 1
 id: lightning-terminal
 category: bitcoin
 name: Lightning Terminal
-version: "0.12.0-alpha"
+version: "0.12.1-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
   outbound liquidity on the Lightning Network. Keep your channels open and the
   funds flowing. It provides a visual interface for interacting with your
   channels and balances using Loop. 
-
-
-  New: Introducing Lightning Pool, a marketplace for Lightning channels. You can now earn sats by opening new channels to those looking to receive funds on Lightning for a set period of time, or rent a channel to start accepting payments instantly. Join the marketplace and start putting your Bitcoin to work.
-
 
   Why use Pool?
 
@@ -34,6 +30,17 @@ description: >-
   - Configurable wait times and "batching" allow for further fee savings
 
   - Refill and offload funds from any number of Lightning channels in a single on-chain transaction
+
+
+  IMPORTANT NOTE FOR UMBREL/LIGHTNING TERMINAL USERS:
+  DO NOT UNDER ANY CIRCUMSTANCE uninstall (or re-install) the "Lightning
+  Terminal" app without first making a manual backup of all local tapd data,
+  if you are using Taproot Assets as part of the "Lightning Terminal" app with
+  Umbrel. Uninstalling Umbrel apps deletes application data. This Taproot
+  Assets application data encumbers Taproot Assets AND bitcoin funds. Receiving
+  and sending tapd assets updates the daemon's funds-custody material. Merely
+  having the lnd seed phrase is NOT enough to restore assets minted or received.
+  WITHOUT BACKUP BEFORE DELETION, FUNDS ARE DESTROYED.
 developer: Lightning Labs
 website: https://lightning.engineering
 dependencies:
@@ -50,10 +57,10 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) updates the integrated Taproot
-  Assets daemon to the latest version (v0.3.0-alpha), which adds support for
-  Taproot Assets on the Bitcoin mainnet! This release also includes an update
-  to the latest patch release of the integrated Loop daemon.
+  This release of Lightning Terminal (LiT) includes updates to the versions
+  of the integrated LND, Loop and Taproot Assets daemons. This release also
+  updates the documentation for RPC commands to be more coherent, as well as
+  various minor bug fixes.
 
 
   IMPORTANT NOTE: To avoid loss of funds, it's imperative that you read the
@@ -84,7 +91,7 @@ releaseNotes: >-
   feedback from the community.
 
 
-  This release packages LND v0.17.0-beta, Taproot Assets Daemon v0.3.0-alpha,
-  Loop v0.26.4-beta, Pool v0.6.4-beta and Faraday v0.2.11-alpha.
+  This release packages LND v0.17.1-beta, Taproot Assets Daemon v0.3.1-alpha,
+  Loop v0.26.5-beta, Pool v0.6.4-beta and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
