Update Torq to v1.4.3

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v1.4.2"
+version: "v1.4.3"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -52,7 +52,7 @@ gallery:
   - 5.jpg
 releaseNotes: >-
   
-  Torq v.1.4.2:
+  Torq v.1.4.3:
   
   List of changes:
 
@@ -65,6 +65,8 @@ releaseNotes: >-
     - Update of packages i.e. Open-Telemetry, gRPC, cobra, ...
   
     - Reduce logging
+  
+    - Fix UUID bug on payment page
   
 
 path: ""
