Update Torq to v1.4.3 (#860)

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v1.4.1"
+version: "v1.4.3"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -52,33 +52,21 @@ gallery:
   - 5.jpg
 releaseNotes: >-
   
-  Torq v.1.4.1:
+  Torq v.1.4.3:
   
   List of changes:
 
-  -  You can now duplicate views
+    - Improve CLN's funds performance
   
-  -  Add payment request to payments page
+    - Fix CLN payments import
   
-  -  Closed channels sometimes reappeared as active when delayed gossip was processed
+    - Fix DST problem in profit chart
   
-  -  Pagination indicated to many pages when filtering
+    - Update of packages i.e. Open-Telemetry, gRPC, cobra, ...
   
-  -  You can now choose refresh interval for each list view
+    - Reduce logging
   
-  -  Fix turnover layout and calculation
-  
-  -  Channel filter "Active" is now true when both sides of the channel are active (used to be local side only)
-  
-  -  Improvements on channel inspect page:
-  
-  -  Show channel open and close dates on charts
-  
-  -  Added basic channel info
-  
-  -  Indicators if data is loading
-  
-  Note: This release contains database migrations and cannot be rolled back to a previous version.
+    - Fix UUID bug on payment page
   
 
 path: ""
