--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -12,8 +12,9 @@ description: >-
 
 
   🚨 CRITICAL REMINDER FOR TAPROOT ASSETS USERS:
+
   Uninstalling this app permanently erases application data, which includes Taproot Assets and Bitcoin funds.
-  Before uninstalling or re-installing this app, you must backup the application's .tapd data folder in order to restore your taproot assets.
+  Before uninstalling or re-installing this app, you must backup the application's .tapd data folder in order to restore your taproot assets upon reinstallation.
   Failure to do so will result in permanent loss of funds. We recommend that you make regular backups.
   Follow this guide to backup your tapd data:
   https://community.umbrel.com/t/backing-up-taproot-assets-tapd-data-in-lightning-terminal/14360
