add mobile app version warning

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,6 +45,9 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
+  ⚠️ Your mobile app must be on at least version 1.88.0 to work with this release of Immich.
+
+  
   In this release we have simplified how Immich is deployed, beautified our app interface with a new font, namely Overpass,
   and finally released version 2 of our command line interface (CLI), which has been in the works for the past six months.
 
