add release notes

--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -15,6 +15,11 @@ description: >-
   
   
   Plus, Passky is easy to use and available on all of your devices, so you can access your passwords wherever you go. Try Passky today and take control of your online security!
+releaseNotes: >-
+  This release includes minor bug fixes and updates.
+
+
+  Full release notes are found at https://github.com/Rabbit-Company/Passky-Server/releases
 developer: Rabbit Company LLC
 website: https://passky.org
 dependencies: []
