--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -22,4 +22,4 @@ defaultUsername: ""
 defaultPassword: ""
 dependencies: []
 submitter: ~dibref-labter
-submission: ""
+submission: https://github.com/getumbrel/umbrel-apps/pull/843
