Update sonarr to 3.0.10

--- a/sonarr/umbrel-app.yml
+++ b/sonarr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: sonarr
 category: media
 name: Sonarr
-version: "3.0.9"
+version: "3.0.10"
 tagline: Smart PVR for newsgroup and bittorrent users
 description: >-
   Sonarr is a PVR for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new episodes of your favorite shows and will grab, sort and rename them. It can also be configured to automatically upgrade the quality of files already downloaded when a better quality format becomes available.
@@ -20,6 +20,12 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  This release updates Sonarr from version 3.0.9 to 3.0.10
+  
+
+  Full tags list is available at https://github.com/Sonarr/Sonarr/tags
+permissions:
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
