add release notes

--- a/sonarr/umbrel-app.yml
+++ b/sonarr/umbrel-app.yml
@@ -18,6 +18,11 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+releaseNotes: >-
+  This release updates Sonarr from 3.0.9 to 3.0.10
+
+
+  Full tags list here: https://github.com/Sonarr/Sonarr/tags
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
