Add login mention

--- a/prowlarr/umbrel-app.yml
+++ b/prowlarr/umbrel-app.yml
@@ -21,7 +21,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update takes Prowlarr from 0.4.4 to 1.10.5
+  This update takes Prowlarr from 0.4.4 to 1.10.5.
+  You will be required to set-up a login for prowlarr with this update.
+
 
   Full release notes here: https://github.com/Prowlarr/Prowlarr/releases
 torOnly: false
