Update robosats to v0.5.3

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: robosats
 category: bitcoin
 name: RoboSats
-version: "v0.5.2-alpha"
+version: "v0.5.3-alpha"
 tagline: Simple and Private Bitcoin P2P Exchange
 description: >-
   RoboSats is a simple and private app to exchange bitcoin for national currencies. 
@@ -34,22 +34,33 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  ⚠️ You may see a warning message after updating the app, informing you that an update is still required.
-  This is a known issue and can be safely disregarded. To prevent the message from appearing every time you open the app,
-  clear your browser cache by pressing Ctrl+Shift+R (Cmd+Shift+R on Mac) while on the app page or selecting the
-  third option in the pop-up.
+  Changes:
 
 
-  - New language: Swahili. Thank you @turizspace!
+  New Features: Face to face.
+  We have introduced a new feature, F2F (Face-to-Face), allowing users to add a location for face-to-face cash trades. 
+  The book page now displays a map with all F2F orders. For privacy reasons, the exact location of your order is slightly randomized (uniform random 15 x 15 Km noise) when you click on the map to locate it. 
+  This means it's not possible to be precise, and the exact location can only be shared on the encrypted chat. 
+  Please note that using high-resolution maps can leak your IP to external tiling servers if you are not using Tor Browser.
 
-  - Improved French and Italian translations. Thank you @LeoSpyke and @jinformatique !
+  Of course, adding a geolocation tag to your order is only a good idea if you want to use face-to-face cash as a payment method. 
+  You can completely disregard this feature if you do not want to use this payment method.
 
-  - Improved invoice descriptions.
 
-  - Small UI fixes.
+  RoboSats-deploy Coordinator Orchestration
 
-  - Add bd taka as currency @dapsavoie 
-  
+
+  Bug Fixes and Performance Improvements
+
+  - Dependency updates.
+
+  - Small bug fixes.
+
+  - Improved DB Writes performance related to last_login user field.
+
+  - Fix small bug on order logging that made automatic dispute resolutions fail.
+
+  - Devfund Donation Pubkey has been updated to RoboSats experimental LND2 node.
   
   Full release notes are available at https://github.com/RoboSats/robosats/releases
 developer: RoboSats
