--- a/robosats/docker-compose.yml
+++ b/robosats/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 12596
 
   web:
-    image: recksato/robosats-client:v0.5.2-alpha@sha256:cbc910c20779ee94f67ffeb12fb30415d31fce897fcbdec8d6c33896dd8e23fa
+    image: recksato/robosats-client:0.5.3-alpha@sha256:987994f561aa9606d87147844edafeb758fdd2c575c290a932f7f4033c4c53d4
     restart: on-failure
     stop_grace_period: 1m
     init: true
