Format release notes

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -50,7 +50,7 @@ releaseNotes: >-
   RoboSats-deploy Coordinator Orchestration
 
 
-  Bug Fixes and Performance Improvements
+  Bug Fixes and Performance Improvements:
 
   - Dependency updates.
 
