Update plex to 1.32.8

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: plex
 category: media
 name: Plex
-version: "1.32.7.7621"
+version: "1.32.8"
 tagline: Stream Movies & TV Shows
 description: >-
   Stream movies and TV shows, plus 300+ channels of live TV, instantly, without a subscription. Watch live TV and movies anywhere, from any device, with Plex.
@@ -29,30 +29,9 @@ torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
 releaseNotes: >-
-  NEW:
-
-  - (Web) Updated to 4.116.1
-  
-
-  FIXES:
-
-  - (Library) “Episode sorting” and “Album sorting” preferences had meaningless “Library default” global library setting
-  
-  - (Library) The default season sort order in TV libraries may not work as intended
-  
-  - (LiveTV) Transcoded video would fail to play in some circumstances
-  
-  - (Metadata) Items could lose metadata if a refresh request failed due to a network failure
-  
-  - (Player) Controlling a player didn’t work in some cases
-  
-  - (Sharing) Sharing a single episode was not playable by sharee
-  
-  - (Transcoder) HW transcoding failed on GeminiLake CPUs when running on linux
-  
-  - (Transcoder) Videos HW encoded on the shield would display a black screen on some devices
+  This update takes Plex from 1.32.7 to 1.32.8
  
 
-  See full release notes here: https://www.videohelp.com/software/Plex
+  See full release notes here: https://github.com/linuxserver/docker-plex/releases/tag/1.32.8.7639-fb6452ebf-ls196
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
