Change release notes

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -32,6 +32,6 @@ releaseNotes: >-
   This update takes Plex from 1.32.7 to 1.32.8
  
 
-  See full release notes here: https://github.com/linuxserver/docker-plex/releases/tag/1.32.8.7639-fb6452ebf-ls196
+  See full release notes here: https://forums.plex.tv/t/plex-web/20528/430
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
