Change app description
Co-authored-by: Nathan Fretz <nmfretz@gmail.com>

--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -3,10 +3,9 @@ id: metube
 category: media
 name: MeTube
 version: "2023.11.16"
-tagline: Simple, youtube (and more) downloader web UI
+tagline: Download videos from YouTube
 description: >-
-  Web GUI for youtube-dl with playlist support. 
-  Allows you to download videos from YouTube and dozens of other sites.
+  Download videos from YouTube (and dozens of other sites) directly to you Umbrel.
 developer: Alex Shnitman
 dependencies: []
 repo: https://github.com/alexta69/metube
