Update LND to 0.17.3-beta

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: bitcoin
 name: Lightning Node
-version: "v0.17.2-beta"
+version: "v0.17.3-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,19 +22,16 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND from version 0.17.0-beta to 0.17.2-beta. 
+  This release updates LND from version 0.17.2-beta to 0.17.3-beta. 
 
 
-  - LND 0.17.1-beta includes a number of bug fixes and optimizations, including: a reduction in CPU utilization due to the new mempool scanning safety logic, enchantments to the CPFP logic for anchor outputs, a fix to a peer/server deadlock, and a bug fix for the new taproot channel type that may have otherwise caused a channel to show as inactive until reconnection.
-  
-
-  - LND 0.17.2-beta includes a fix for a bug that could cause a panic when a channel is closed while a commitment update is being processed.
+  - LND 0.17.3-beta fixes multiple concurrency and memory related bugs. Memory consumption for lnd nodes running with bitcoind using the rpcpolling has been significantly reduced (previously scaled with total mempool size).
 
 
   - Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
 
 
-  🔔 In case you missed it, our previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
+  🔔 In case you missed it, our previous release of the Lightning Node app (v0.17.2-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
 
 
   - Hybrid mode allows your node to make connections to peers (other nodes) over both Tor and clearnet, enhancing both latency and connection stability. This is enabled by default for new users, while existing users can activate it in Advanced Settings.
