update submission url

--- a/nostrudel/umbrel-app.yml
+++ b/nostrudel/umbrel-app.yml
@@ -39,4 +39,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: hzrd149
-submission: ""
+submission: https://github.com/getumbrel/umbrel-apps/pull/901
