Update Syncthing to v1.27.0

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: files
 name: Syncthing
-version: "1.26.0"
+version: "1.27.0"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -28,21 +28,16 @@ defaultPassword: ""
 releaseNotes: >-
   This release includes the following bug fixes and enhancements:
 
-  - Use a real login screen + sessions instead of HTTP basic auth
+  - spurious log file in $XDG_CONFIG_HOME
 
-  - Omitting %s from LDAP search filter results in corrupt search filter
+  - Discovery Returns IP
 
-  - Posting config with invalid versioner type causes panic
+  - Display error in 1.26 with login screen
 
-  - Deduplicated files on Windows aren't treated as regular files any more (Go 1.21)
+  - Default config (state) dir on Unixes should be ~/.local/state/syncthing ($XDG_STATE_HOME/syncthing)
 
-  - Syncthing Docker container fails to start if underlying filesystem doesn't support chown
-
-  - traefik no longer url escape X-Forwarded-Tls-Client-Cert header
-
-  - Favicon is stuck in notify state
-
+  - Login form: login button should have an id attribute
   
-  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.26.0
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.27.0
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
